--- a/visualizer/simple.html
+++ b/visualizer/simple.html
@@ -2,32 +2,36 @@
 <head>
     <title>Simple Land War Visualizer</title>
     <script type="text/javascript" src="scratch/lib/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../data.js"></script>
     <script type="text/javascript">
-        var replayData;
-        var curTurn;
-        var TILES = [
-                        [0x008B8B], // t1
-                        [0x5E2612], // t2
-                        [0x848484], // t3
-                        [0x00CD00, 0xCD0000, 0xFFD700] // f
-                    ];
+        //var replayData;
+        var curTurn = 0;
+        var TILES = {
+                        '1':["#2FBD2F"], // t1
+                        '2':["#2F39BD"], // t2
+                        '3':["#8C6C15"], // t3
+                        '4':["#736D5C"], // t3
+                        '5':["#6E3034"], // t3
+                        'c':["#00FBFF", "#FF00FF", "#FFFF00"],
+                        'f':["#00FBFF", "#FF00FF", "#FFFF00"]
+                    };
         var TILE_W = 20, TILE_H = 20;
         var ctx;
 
-        var turnLength;
+        var turnLength = 500;
 
         var turnTimer;
         $(document).ready(function(){
             ctx = $('#canvas')[0].getContext('2d');
-            $.get("../data.json", function(data){
-                replayData = data;
-                drawMap(data.map);
+            //$.get("../replay.json", function(data){
+            //    replayData = data;
+                drawMap(window.replayData.map);
                 turnTimer = setTimeout(nextTurn, turnLength);
-            });
+            //});
         });
 
         function nextTurn(){
-            updateTiles(curTurn++);
+            updateTiles(window.replayData.turns[curTurn++]);
             turnTimer = setTimeout(nextTurn, turnLength);
         }
 
@@ -41,19 +45,19 @@
         function drawMap(map){
             for (var i = 0; i < map.length; i++) { //## right order?
                 for (var j = 0; j < map[0].length; j++) {
-                    drawTile(map[i][j]);
+                    drawTile({x:i, y:j, t:map[i][j]});
                 }
             }
         }
 
         function drawTile(tile){
-            ctx.fillStyle = TILES[tile.t.terrain][tile.t.owner];
+            ctx.fillStyle = TILES[tile.t.t][tile.t.o || 0];
             ctx.fillRect(tile.x*TILE_W, tile.y*TILE_H, TILE_W, TILE_H); //## backwards x y?
         }
 
     </script>
 </head>
 <body>
-    <canvas id="canvas" width="1000" height="800"></canvas>
+    <canvas id="canvas" width="1000" height="1000"></canvas>
 </body>
 </html>
