--- a/visualizer/simple.html
+++ b/visualizer/simple.html
@@ -12,13 +12,13 @@
                         '3':["#8C6C15"], // t3
                         '4':["#736D5C"], // t3
                         '5':["#6E3034"], // t3
-                        'c':["#00FBFF", "#FF00FF", "#FFFF00"],
+                        'c':["#00FBFF", "#A820A6", "#FFB300"],
                         'f':["#00FBFF", "#FF00FF", "#FFFF00"]
                     };
-        var TILE_W = 20, TILE_H = 20;
+        var TILE_W = 10, TILE_H = 10;
         var ctx;
 
-        var turnLength = 200;
+        var turnLength = 100;
 
         var turnTimer;
         $(document).ready(function(){
@@ -53,6 +53,10 @@
         function drawTile(tile){
             ctx.fillStyle = TILES[tile.t.t][tile.t.o || 0];
             ctx.fillRect(tile.x*TILE_W, tile.y*TILE_H, TILE_W, TILE_H); //## backwards x y?
+            if(tile.t.s){
+                ctx.fillStyle = TILES[tile.t.s][tile.t.o || 0];
+                ctx.fillRect(tile.x*TILE_W+TILE_W/3, tile.y*TILE_H+TILE_H/3, TILE_W/3, TILE_H/3);
+            }
         }
 
     </script>
